<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefefff"
    tools:context=".Pre2Activity" >

    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
    <RelativeLayout
        android:focusable="true" android:focusableInTouchMode="true"
        android:layout_width="0px" android:layout_height="0px" />
    
    <!-- :nextFocusUp and :nextFocusLeft have been set to the id of this component
    	 to prevent the dummy receiving focus again -->
   	<!-- Height Layout -->
	<RelativeLayout
        android:id="@+id/height_linear"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginTop="40dip"
        android:baselineAligned="false"
        android:background="@drawable/rectangle_box" >

        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dip"
            android:labelFor="@+id/height_Edit"
            android:text="@string/height"
            android:textColor="#787878" />
        
		<EditText
            android:id="@+id/height_Edit"
            android:layout_width="190dip"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/heightMetrics"
            android:paddingRight="10dip"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="right|center_vertical"
            android:singleLine="true" 
            android:textSize="15sp"
            android:background="#00000000"
            android:hint="@string/enter_height"
            android:textCursorDrawable="@null"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/heightMetrics"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingRight="10dip"
            android:layout_marginTop="5dip"
            android:gravity="right|center_vertical"
            android:text="@string/height_metric"
            android:textColor="@color/black"
            android:textSize="15sp" />
        
    </RelativeLayout>
    
	<!-- Weight Layout -->
    <RelativeLayout
        android:id="@+id/weight_linear"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_below="@+id/height_linear"
        android:layout_marginTop="0dip"
        android:baselineAligned="false"
        android:background="@drawable/rectangle_box" >
        	
        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:labelFor="@+id/weight_Edit"
            android:text="@string/weight"
            android:textColor="#787878" />

        <EditText
            android:id="@+id/weight_Edit"
            android:layout_width="190dip"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/weightMetrics"
            android:paddingRight="10dip"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="right|center_vertical"
            android:singleLine="true" 
            android:textSize="15sp"
            android:background="#00000000"
            android:hint="@string/enter_weight"
            android:textCursorDrawable="@null"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/weightMetrics"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingRight="10dip"
            android:layout_marginTop="5dip"
            android:gravity="center_vertical"
            android:text="@string/weight_metric"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>
    
    <!-- Education Layout -->
    <RelativeLayout
        android:id="@+id/education_linear"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_below="@+id/weight_linear"
        android:layout_marginTop="0dip"
        android:baselineAligned="false"
        android:background="@drawable/rectangle_box" >

        <TextView
          	android:id="@+id/education"
           	android:layout_width="wrap_content"
           	android:layout_height="match_parent"
           	android:gravity="center_vertical"
           	android:paddingLeft="10dip"
           	android:text="@string/education"
           	android:textColor="#787878" />

       	<RadioGroup
	   		android:id="@+id/radio_Education"
	  		android:layout_width="wrap_content"
	   		android:layout_height="match_parent"
	   		android:layout_alignParentRight="true"
	   		android:paddingRight="10dip"
	   		android:orientation="horizontal" >
	    		
	   		<RadioButton
	       		android:id="@+id/radio_primary"
	       		android:layout_width="wrap_content"
	       		android:layout_height="match_parent"
	       		android:checked="true"
	       		android:text="@string/radio_primary" />
	    		
	   		<RadioButton
	       		android:id="@+id/radio_secondary"
	       		android:layout_width="wrap_content"
	       		android:layout_height="match_parent"
	       		android:text="@string/radio_secondary" />
	    		
		</RadioGroup>

    </RelativeLayout>
    
    <!-- School Layout -->
    <RelativeLayout
        android:id="@+id/school_linear"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_below="@+id/education_linear"
        android:layout_marginTop="0dip"
        android:baselineAligned="false"
        android:background="@drawable/rectangle_box"  >
        	
        <TextView
            android:id="@+id/school"
            android:layout_width="wrap_content"
           	android:layout_height="match_parent"
           	android:gravity="center_vertical"
           	android:paddingLeft="10dip"
           	android:labelFor="@+id/school_Edit"
           	android:text="@string/school"
           	android:textColor="#787878" />

       	<AutoCompleteTextView
           	android:id="@+id/school_Edit"
           	android:layout_width="190dip"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingRight="10dip"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="right|center_vertical"
            android:singleLine="true" 
            android:textSize="15sp"
            android:background="#00000000"
            android:hint="@string/enter_school"
            android:textCursorDrawable="@null" />

    </RelativeLayout>
    
    <!-- Class Layout -->
    <RelativeLayout
        android:id="@+id/class_linear"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_below="@+id/school_linear"
        android:layout_marginTop="0dip"
        android:baselineAligned="false"
        android:background="@drawable/rectangle_box"  >

        <TextView	
           	android:id="@+id/cl"
           	android:layout_width="wrap_content"
           	android:layout_height="match_parent"
           	android:gravity="center_vertical"
           	android:paddingLeft="10dip"
           	android:labelFor="@+id/class_Edit"
           	android:text="@string/cl"
           	android:textColor="#787878" />

       	<EditText
           	android:id="@+id/class_Edit"
           	android:layout_width="190dip"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingRight="10dip"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="right|center_vertical"
            android:singleLine="true" 
            android:textSize="15sp"
            android:background="#00000000"
            android:hint="@string/enter_class"
            android:textCursorDrawable="@null" />

    </RelativeLayout>
    
	<!-- Register Number Layout -->    
    <RelativeLayout
        android:id="@+id/reg_no_linear"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_below="@+id/class_linear"
        android:layout_marginTop="0dip"
        android:baselineAligned="false"
        android:background="@drawable/rectangle_box" >

        <TextView
           	android:id="@+id/reg_no"
           	android:layout_width="wrap_content"
           	android:layout_height="match_parent"
           	android:gravity="center_vertical"
           	android:paddingLeft="10dip"
       		android:labelFor="@+id/reg_no_Edit"
           	android:text="@string/reg_no"
           	android:textColor="#787878" />

        <EditText
           	android:id="@+id/reg_no_Edit"
           	android:layout_width="190dip"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingRight="10dip"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="right|center_vertical"
            android:singleLine="true" 
            android:textSize="15sp"
            android:background="#00000000"
            android:hint="@string/enter_reg_no"
            android:textCursorDrawable="@null" 
            android:inputType="number" />

    </RelativeLayout>
    
    <!-- Activity Level Layout -->
    <RelativeLayout
        android:id="@+id/activity_level_linear"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_below="@+id/reg_no_linear"
        android:layout_marginTop="0dip"
        android:baselineAligned="false"
        android:background="@drawable/rectangle_box" >

       	<TextView
           	android:id="@+id/activity_level"
           	android:layout_width="wrap_content"
           	android:layout_height="match_parent"
           	android:gravity="center_vertical"
          	android:paddingLeft="10dip"
           	android:labelFor="@+id/activity_level_Edit"
           	android:text="@string/activity_level"
           	android:textColor="#787878" />
       	
       	<Spinner
           	android:id="@+id/activity_level_Edit"
           	android:layout_width="190dip"
           	android:layout_height="match_parent"
           	android:layout_alignParentRight="true"
           	android:ellipsize="start"
           	android:ems="10"
           	android:gravity="right|center_vertical"
           	android:textSize="12sp"
           	android:singleLine="true" 
           	android:entries="@array/activity_level_arrays"
           	android:prompt="@string/activity_level_prompt"/>

    </RelativeLayout>
</RelativeLayout>
