<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:id="@+id/education_linear"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_below="@+id/weight_linear"
        android:layout_marginTop="0dip"
        android:baselineAligned="false"
        android:background="@drawable/rectangle_box" >
		<LinearLayout 
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1">
        	<TextView
            	android:id="@+id/education"
            	android:layout_width="wrap_content"
            	android:layout_height="match_parent"
            	android:gravity="center_vertical"
            	android:paddingLeft="10dip"
            	android:text="@string/education"
            	android:textColor="#787878" />
		</LinearLayout>
		<LinearLayout
		    android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="right"
            android:paddingRight="3dip">
        	
        	<RadioGroup
	    		android:id="@+id/radio_Education"
	    		android:layout_width="wrap_content"
	    		android:layout_height="match_parent"
	    		android:orientation="horizontal" >
	    		
	    		<RadioButton
	        		android:id="@+id/radio_primary"
	        		android:layout_width="wrap_content"
	        		android:layout_height="match_parent"
	        		android:checked="true"
	        		android:text="@string/radio_primary" />
	    		
	    		<RadioButton
	        		android:id="@+id/radio_secondary"
	        		android:layout_width="wrap_content"
	        		android:layout_height="match_parent"
	        		android:text="@string/radio_secondary" />
	    		
			</RadioGroup>
		</LinearLayout>
    </LinearLayout>
    
    
	<LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/education_linear"
            android:layout_marginTop="20dip"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/done_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/done" />
        </LinearLayout>
        
</RelativeLayout>
