<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:id="@+id/activity_level_linear"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginTop="20dip"
        android:baselineAligned="false" >
		<LinearLayout 
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1">
        	<TextView
            	android:id="@+id/activity_level"
            	android:layout_width="wrap_content"
            	android:layout_height="match_parent"
            	android:gravity="center_vertical"
            	android:paddingLeft="10dip"
            	android:labelFor="@+id/activity_level_Edit"
            	android:text="@string/activity_level"
            	android:textColor="#787878" />
		</LinearLayout>
		<LinearLayout
		    android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2">
        	<Spinner
            	android:id="@+id/activity_level_Edit"
            	android:layout_width="match_parent"
            	android:layout_height="match_parent"
            	android:ellipsize="end"
            	android:ems="10"
            	android:gravity="right"
            	android:textSize="12sp"
            	android:singleLine="true" 
            	android:entries="@array/activity_level_arrays"
            	android:prompt="@string/activity_level_prompt"/>
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_level_linear"
            android:layout_marginTop="20dip"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/done_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/done" />
        </LinearLayout>

</RelativeLayout>
